ratecontrol: Fix assertion failure on mismatching 2pass file.

Fixes Ticket582

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>